--- a/lineChart/index.html
+++ b/lineChart/index.html
@@ -8,7 +8,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.6.2/chart.min.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <title>Proyecto de prueba Chart.js || Bar Chart</title>
+    <title>Proyecto de prueba Chart.js || Line Chart</title>
 </head>
 
 <body>
@@ -19,21 +19,22 @@
         let myChart = document.getElementById('chartCanva').getContext('2d');
 
         let generalChart = new Chart(myChart, {
-            type: 'bar',
+            type: 'line',
             data: {
-                labels: ['Algarrobo', 'Cartagena', 'San Antonio', 'Isla de pascua'],
+                labels: ['2015', '2016', '2017', '2018', '2019', '2020'],
                 datasets: [{
-                    label: 'Poblacion',
-                    data: [11_032, 21_036, 98_299, 7_582],
+                    label: 'Poblacion de San Antonio',
+                    data: [96_764, 97_136, 97_481, 97_780, 98_054, 98_299],
                     backgroundColor: [
                         'rgba(63, 191, 191, 0.6)',
                         'rgba(127, 191, 63, 0.6)',
                         'rgba(191, 63, 63, 0.6)',
                         'rgba(191, 63, 191, 0.6)'
                     ],
-                    borderWidth: 1.5,
-                    borderColor: '#777'
+
+                    pointRadius: 8,
                     
+
 
                 },
                 ]
